<resources>
    <string name="app_name">Inventory</string>
    <string name="empty_view_text_view">No Books Yet...</string>
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="hint_edit">Add</string>
    <string name="book_price">Price</string>
    <string name="book_quantity">Quantity</string>
    <string name="sale_button">Sale</string>
    <string name="category_overview">Overview</string>
    <string name="hint_book_name">Name of book</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_book_price">Price</string>
    <string name="hint_supplier">Supplier Name</string>
    <string name="hint_phone">Supplier Phone Number</string>
    <string name="add_button">Add Quantity</string>
    <string name="minus_button">Remove Quantity</string>
    <string name="delete">Delete</string>
    <string name="action_insert_dummy_data">Insert Dummy Book</string>
    <string name="action_delete_all_entries">Delete All Books</string>
    <string name="delete_all_dialog_msg">Delete all products from the database?</string>
    <string name="cancel">Cancel</string>
    <string name="editor_activity_title_new_book">Add a book</string>
    <string name="editor_activity_title_edit_book">Edit a book</string>
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="editor_insert_book_successful">Book Saved</string>
    <string name="editor_update_book_failed">Error with updating book</string>
    <string name="editor_update_book_successful">Book Updated</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="editor_delete_book_successful">book deleted</string>
    <string name="editor_insert_product_info_missing">All fields are required</string>

</resources>
