<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/padding"
            android:textColor="@color/textPrimary"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceSmall"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="@dimen/padding_left"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/book_name"
                android:hint="@string/hint_book_name"
                android:inputType="textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textAppearance="?android:textAppearanceMedium"/>
            <EditText
                android:id="@+id/book_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_quantity"
                android:inputType="number"
                android:digits="1234567890"
                android:maxLength="3"
                android:fontFamily="sans-serif-light"
                android:textAppearance="?android:textAppearanceMedium"
                />
            <EditText
                android:layout_width="match_parent"
                android:hint="@string/hint_book_price"
                android:layout_height="wrap_content"
                android:id="@+id/book_price"
                android:inputType="number"
                android:digits="1234567890"
                android:maxLength="3"
                android:fontFamily="sans-serif-light"
                android:textAppearance="?android:textAppearanceMedium"
                />
            <EditText
                android:id="@+id/book_supplier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_supplier"
                android:inputType="textCapWords"
                android:fontFamily="sans-serif-light"
                android:textAppearance="?android:textAppearanceMedium"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/supplier_phone"
                android:inputType="number|phone"
                android:maxLength="12"
                android:hint="@string/hint_phone"
                android:fontFamily="sans-serif-light"
                android:textAppearance="?android:textAppearanceMedium"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/main_margin">

        <Button
            android:id="@+id/add_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_button" />

        <Button
            android:id="@+id/minus_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/main_margin">

        <Button
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />

    </LinearLayout>

</LinearLayout>